--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
         
         <div ID="nav">
             <ul>
-                <li>Home</li>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
                 <li>Impressum</li>
             </ul>
         </div>
