--- a/themen.html
+++ b/themen.html
@@ -51,7 +51,9 @@
                 <li>
                     <a href="index.html">Home</a>
                 </li>
-                <li>Impressum</li>
+                <li>
+                    <a href="impressum.html">Impressum</a>
+                </li>
             </ul>
         </div>
         
