--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         
         <title>Discide</title>
+        <meta charset="utf-8">
         <link href="https://fonts.googleapis.com/css?family=Spectral+SC" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Quicksand" rel="stylesheet">
