--- a/themen.html
+++ b/themen.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title> Thema XY</title>
+        <meta charset="utf-8">
         <link href="https://fonts.googleapis.com/css?family=Spectral+SC" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Quicksand" rel="stylesheet">
