--- a/themen.html
+++ b/themen.html
@@ -23,8 +23,8 @@
             <table id="argumentT">
                 <thead>
                     <tr>
-                        <th>+</th>
-                        <th>-</th>
+                        <th><div class="procon">+</div></th>
+                        <th><div class="procon">-</div></th>
                     </tr>
                 </thead>
                 <tbody>
