--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <div ID="nav">
             <ul>
                 <li>
-                    <a href="index.html">Home</a>
+                    <a class="link" href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="impressum.html">Impressum</a>
+                    <a class="link" href="impressum.html">Impressum</a>
                 </li>
             </ul>
         </div>
