--- a/themen.html
+++ b/themen.html
@@ -29,18 +29,18 @@
             <div class="proarg">
                 <h1 class="procont">Pro</h1>
                 <div id="contentpro">
-                <div id="proarg1">
-                    <h1 class="argumentname">Argument1</h1>
-                    <div class="reason">
-                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                    <div id="proarg1">
+                        <h1 class="argumentname">Argument1</h1>
+                        <div class="reason">
+                            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                        </div>
                     </div>
-                </div>
-                <div id="proarg2">
-                    <h1 class="argumentname">Argument2</h1>
-                    <div class="reason">
-                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                    <div id="proarg2">
+                        <h1 class="argumentname">Argument2</h1>
+                        <div class="reason">
+                            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                        </div>
                     </div>
-                </div>
                 </div>
                 <div id="ProNeu">
                     <input type="text" placeholder="Gib hier dein neues Pro Argument ein"><button type="submit" action="">Hinzufügen</button>
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <div id="ConNeu">
-                    <input type="text" placeholder="Gib hier dein neues Con Argument ein"><button type="submit" action="">Hinzufügen</button>
+                    <input type="text" placeholder="Gib hier dein neues Con Argument ein" id="neuesPro"><button onclick="">Hinzufügen</button>
                 </div>
             </div>
 
