--- a/themen.html
+++ b/themen.html
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <div id="ConNeu">
-                    <input type="text" placeholder="Gib hier dein neues Con Argument ein" id="neuesPro"><button onclick="">Hinzufügen</button>
+                    <input type="text" placeholder="Gib hier dein neues Con Argument ein" id="neuesPro"><button onclick="add_pro_argument">Hinzufügen</button>
                 </div>
             </div>
 
@@ -81,10 +81,10 @@
     <div ID="nav">
         <ul>
             <li>
-                <a href="index.html">Home</a>
+                <a class="link" href="index.html">Home</a>
             </li>
             <li>
-                <a href="impressum.html">Impressum</a>
+                <a class="link" href="impressum.html">Impressum</a>
             </li>
         </ul>
     </div>
