--- a/themen.html
+++ b/themen.html
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <div id="ProNeu">
-                    <input type="text" placeholder="Gib hier dein neues Pro Argument ein"><button type="submit" action="">Hinzufügen</button>
+                    <input type="text" placeholder="Gib hier dein neues Pro Argument ein"><button type="submit" onclick="add_pro_argument()">Hinzufügen</button>
                 </div>
 
             </div>
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <div id="ConNeu">
-                    <input type="text" placeholder="Gib hier dein neues Con Argument ein" id="neuesPro"><button onclick="add_pro_argument">Hinzufügen</button>
+                    <input type="text" placeholder="Gib hier dein neues Con Argument ein" id="neuesPro"><button >Hinzufügen</button>
                 </div>
             </div>
 
