--- a/themen.html
+++ b/themen.html
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <div id="ProNeu">
-                    <input type="text" placeholder="Gib hier dein neues Pro Argument ein"><button type="submit" onclick="add_pro_argument()">Hinzufügen</button>
+                    <input type="text" placeholder="Gib hier dein neues Pro Argument ein" id="ProNeu"><button type="submit" onclick="add_pro_argument()">Hinzufügen</button>
                 </div>
 
             </div>
