--- a/themen.html
+++ b/themen.html
@@ -42,8 +42,8 @@
                         </div>
                     </div>
                 </div>
-                <div id="ProNeu">
-                    <input type="text" placeholder="Gib hier dein neues Pro Argument ein" id="ProNeu"><button type="submit" onclick="add_pro_argument()">Hinzufügen</button>
+                <div>
+                    <input type="text" placeholder="Gib hier dein neues Pro Argument ein" id="neuesPro"><button type="submit" onclick="add_pro_argument()">Hinzufügen</button>
                 </div>
 
             </div>
