--- a/themen.html
+++ b/themen.html
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <div id="ConNeu">
-                    <input type="text" placeholder="Gib hier dein neues Con Argument ein" id="neuesCon"><button type="submit" onclick="add_con_argument">Hinzufügen</button>
+                    <input type="text" placeholder="Gib hier dein neues Con Argument ein" id="neuesCon"><button type="submit" onclick="add_con_argument()">Hinzufügen</button>
                 </div>
             </div>
 
