--- a/themen.html
+++ b/themen.html
@@ -1,6 +1,6 @@
 <html>
 
-    <head>
+<head>
     <title> Thema XY</title>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Spectral+SC" rel="stylesheet">
@@ -34,7 +34,9 @@
                         <div class="reason">
                             <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
                         </div>
+                        <input type="text" placeholder="Begruendung" id="reason"><button type="submit" onclick="addReasonPro()"></button>
                     </div>
+                    
                     <div id="proarg2">
                         <h1 class="argumentname">Argument2</h1>
                         <div class="reason">
@@ -43,7 +45,7 @@
                     </div>
                 </div>
                 <div>
-                    <input type="text" placeholder="Gib hier dein neues Pro Argument ein" id="neuesPro"><button type="submit" onclick="add_pro_argument()">Hinzufügen</button>
+                    <input type="text" placeholder="Argument" id="neuesPro"><button type="submit" onclick="add_pro_argument();addReasonPro()">Hinzufügen</button>
                 </div>
 
             </div>
