--- a/themen.html
+++ b/themen.html
@@ -44,7 +44,7 @@
                         </div>
                     </div>
                 </div>
-                <div>
+                <div id="ProNeu">
                     <input type="text" placeholder="Argument" id="neuesPro"><button type="submit" onclick="add_pro_argument();addReasonPro()">Hinzufügen</button>
                 </div>
 
