--- a/themen.html
+++ b/themen.html
@@ -11,7 +11,7 @@
     <script src="jquery_1.js"></script>
 </head>
 
-<body onload='load_arguments()'>
+<body onload='start_load_arguments()'>
 
     <a href="index.html"><img  id="logo" src="logo.png"></a>
 
