--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
             
             </div>
         </div>
-        <div>  
+        <div class="titlewrapper">  
             <div>
-                Neues Thema erstellen: 
+                <p>
+                Neues Thema erstellen:
+                </p> 
             </div>
             <div class="thema">
                 <input type="button" class="button" id="addbutton" value="+">
